# cpp-docker-ci-cd

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: docker-cd.yml  docker-ci.yml
src/: main.cpp
